// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Topics routes should match expectations topics.catalog matches expectations topics.catalog matches the snapshot on file 1`] = `
{
  "filters": {
    "completionStatus": {
      "completed": false,
      "in progress": true,
      "not started": true,
    },
    "priorityLevel": {
      "assigned": true,
      "available": false,
      "recommended": true,
    },
  },
  "topics": [
    {
      "completionStatus": "completed",
      "contentMode": "documentation",
      "coverImageUrl": "http://localhost:8080/topic-assets/boombox-feature-utopia-vseed/images/content-utopia.jpg",
      "currentDocumentUri": "boombox-feature-utopia-vseed_achievement-badge",
      "firstDocumentUri": "boombox-feature-utopia-vseed_achievement-badge",
      "prerequisites": [],
      "priorityLevel": "assigned",
      "slug": "boombox-feature-utopia",
      "subtitle": "The full list of content components.",
      "title": "Boombox Component Catalog",
      "unmetPrerequisites": [],
      "uri": "boombox-feature-utopia-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-5-vseed/images/building-to-scale.jpg",
      "currentDocumentUri": "filler-topic-5-vseed_doc-1",
      "firstDocumentUri": "filler-topic-5-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-5",
      "subtitle": "A primer on microservices and other enterprise architecture",
      "title": "Building Apps to Scale",
      "unmetPrerequisites": [],
      "uri": "filler-topic-5-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/code-of-conduct-vseed/images/code-of-conduct.jpg",
      "currentDocumentUri": "code-of-conduct-vseed_doc-1",
      "firstDocumentUri": "code-of-conduct-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "assigned",
      "slug": "code-of-conduct",
      "subtitle": "A universal Code of Conduct that can be required by other topics as a prerequisite",
      "title": "Code of Conduct",
      "unmetPrerequisites": [],
      "uri": "code-of-conduct-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/data-at-cloudco-vseed/images/data-at-cloudco.jpg",
      "currentDocumentUri": "data-at-cloudco-vseed_customization-page",
      "firstDocumentUri": "data-at-cloudco-vseed_customization-page",
      "prerequisites": [
        "code-of-conduct",
      ],
      "priorityLevel": "recommended",
      "slug": "data-at-cloudco",
      "subtitle": "An introduction to making data-driven decisions at CloudCo.",
      "title": "Data at CloudCo",
      "unmetPrerequisites": [],
      "uri": "data-at-cloudco-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-4-vseed/images/heroku.jpeg",
      "currentDocumentUri": "filler-topic-4-vseed_doc-1",
      "firstDocumentUri": "filler-topic-4-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-4",
      "subtitle": "Using command-line tools to ship an app",
      "title": "Deploying on Heroku",
      "unmetPrerequisites": [],
      "uri": "filler-topic-4-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-11-vseed/images/experimentation.jpg",
      "currentDocumentUri": "filler-topic-11-vseed_doc-1",
      "firstDocumentUri": "filler-topic-11-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-11",
      "subtitle": "Building, deploying, and analyzing experiments.",
      "title": "Experimentation",
      "unmetPrerequisites": [],
      "uri": "filler-topic-11-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-9-vseed/images/incident-management.jpg",
      "currentDocumentUri": "filler-topic-9-vseed_doc-1",
      "firstDocumentUri": "filler-topic-9-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-9",
      "subtitle": "Our worst incidents (and what we learned from them).",
      "title": "Incident Case Studies",
      "unmetPrerequisites": [],
      "uri": "filler-topic-9-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/intro-to-boombox-lms-vseed/images/boombox.jpg",
      "currentDocumentUri": "intro-to-boombox-lms-vseed_skills-and-customization",
      "firstDocumentUri": "intro-to-boombox-lms-vseed_skills-and-customization",
      "prerequisites": [],
      "priorityLevel": "assigned",
      "slug": "intro-to-boombox-lms",
      "subtitle": "What is it? Why is it? How does it work? Your questions, answered.",
      "title": "Intro to Boombox LMS",
      "unmetPrerequisites": [],
      "uri": "intro-to-boombox-lms-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-6-vseed/images/kibana.jpeg",
      "currentDocumentUri": "filler-topic-6-vseed_doc-1",
      "firstDocumentUri": "filler-topic-6-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-6",
      "subtitle": "Common queries and visualizations",
      "title": "Intro to Kibana",
      "unmetPrerequisites": [],
      "uri": "filler-topic-6-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-1-vseed/images/sql.jpg",
      "currentDocumentUri": "filler-topic-1-vseed_doc-1",
      "firstDocumentUri": "filler-topic-1-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-1",
      "subtitle": "A beginner's guide to querying data in Mode",
      "title": "Intro to SQL",
      "unmetPrerequisites": [],
      "uri": "filler-topic-1-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-8-vseed/images/robot-friend.jpg",
      "currentDocumentUri": "filler-topic-8-vseed_doc-1",
      "firstDocumentUri": "filler-topic-8-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-8",
      "subtitle": "A proprietary challenge set for graduates of Intro to ML",
      "title": "ML Challenges",
      "unmetPrerequisites": [],
      "uri": "filler-topic-8-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-10-vseed/images/observability.jpg",
      "currentDocumentUri": "filler-topic-10-vseed_doc-1",
      "firstDocumentUri": "filler-topic-10-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-10",
      "subtitle": "A step-by-step guide to designing a new feature with observability in mind.",
      "title": "Observability Planning",
      "unmetPrerequisites": [],
      "uri": "filler-topic-10-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-12-vseed/images/sdlc.jpg",
      "currentDocumentUri": "filler-topic-12-vseed_doc-1",
      "firstDocumentUri": "filler-topic-12-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-12",
      "subtitle": "Our processes and policies for shipping high-quality features.",
      "title": "Our SDLC",
      "unmetPrerequisites": [],
      "uri": "filler-topic-12-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-13-vseed/images/python-best-practices.jpg",
      "currentDocumentUri": "filler-topic-13-vseed_doc-1",
      "firstDocumentUri": "filler-topic-13-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-13",
      "subtitle": "Mocks, fixtures, and more",
      "title": "Python Best Practices",
      "unmetPrerequisites": [],
      "uri": "filler-topic-13-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-7-vseed/images/security.jpg",
      "currentDocumentUri": "filler-topic-7-vseed_doc-1",
      "firstDocumentUri": "filler-topic-7-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-7",
      "subtitle": "Patterns for avoiding the most common attacks",
      "title": "Security Best Practices",
      "unmetPrerequisites": [],
      "uri": "filler-topic-7-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/smoke-testing-vseed/images/smoke-testing.jpg",
      "currentDocumentUri": "smoke-testing-vseed_basic-topic-functionality",
      "firstDocumentUri": "smoke-testing-vseed_basic-topic-functionality",
      "prerequisites": [],
      "priorityLevel": "assigned",
      "slug": "smoke-testing",
      "subtitle": "Verify that this topic still works before merging to main.",
      "title": "Smoke Testing",
      "unmetPrerequisites": [],
      "uri": "smoke-testing-vseed",
      "version": "seed",
    },
    {
      "completionStatus": "completed",
      "contentMode": "tutorial",
      "coverImageUrl": "http://localhost:8080/topic-assets/filler-topic-2-vseed/images/redux.png",
      "currentDocumentUri": "filler-topic-2-vseed_doc-1",
      "firstDocumentUri": "filler-topic-2-vseed_doc-1",
      "prerequisites": [],
      "priorityLevel": "available",
      "slug": "filler-topic-2",
      "subtitle": "A guide to managing React state with Redux Toolkit",
      "title": "Using Redux Toolkit",
      "unmetPrerequisites": [],
      "uri": "filler-topic-2-vseed",
      "version": "seed",
    },
  ],
}
`;

exports[`Topics routes should match expectations topics.contents matches expectations topics.contents matches the snapshot on file 1`] = `
{
  "config": {
    "contentMode": "tutorial",
    "groupAccessLevels": {
      "assigned": [
        "all",
      ],
    },
    "prerequisites": [],
    "slug": "smoke-testing",
  },
  "coverImageUrl": "http://localhost:8080/topic-assets/smoke-testing-vseed/images/smoke-testing.jpg",
  "documents": [
    {
      "title": "Basic topic functionality",
      "topicUri": "smoke-testing-vseed",
      "uri": "smoke-testing-vseed_basic-topic-functionality",
    },
    {
      "title": "Select inputs",
      "topicUri": "smoke-testing-vseed",
      "uri": "smoke-testing-vseed_select-inputs",
    },
    {
      "title": "Text inputs and piping",
      "topicUri": "smoke-testing-vseed",
      "uri": "smoke-testing-vseed_text-inputs",
    },
    {
      "title": "Piped responses from other documents",
      "topicUri": "smoke-testing-vseed",
      "uri": "smoke-testing-vseed_response-persistence",
    },
  ],
  "prerequisites": [],
  "slug": "smoke-testing",
  "subtitle": "Verify that this topic still works before merging to main.",
  "title": "Smoke Testing",
  "uri": "smoke-testing-vseed",
}
`;

exports[`Topics routes should match expectations topics.enrollment and topics.verifyCompletion match expectations topics.enrollment matches the snapshot on file 1`] = `
{
  "currentDocumentUri": "smoke-testing-vseed_basic-topic-functionality",
  "documentStatus": {
    "smoke-testing-vseed_basic-topic-functionality": {
      "isCompleted": true,
      "isLocked": false,
      "isVisible": true,
      "nextVisibleDocumentUri": "smoke-testing-vseed_select-inputs",
    },
    "smoke-testing-vseed_response-persistence": {
      "isCompleted": true,
      "isLocked": false,
      "isVisible": true,
      "nextVisibleDocumentUri": null,
    },
    "smoke-testing-vseed_select-inputs": {
      "isCompleted": true,
      "isLocked": false,
      "isVisible": true,
      "nextVisibleDocumentUri": "smoke-testing-vseed_text-inputs",
    },
    "smoke-testing-vseed_text-inputs": {
      "isCompleted": true,
      "isLocked": false,
      "isVisible": true,
      "nextVisibleDocumentUri": "smoke-testing-vseed_response-persistence",
    },
  },
  "id": 20,
  "progressPercentage": 100,
  "topicIsCompleted": true,
  "topicUri": "smoke-testing-vseed",
  "userId": 2,
}
`;

exports[`Topics routes should match expectations topics.enrollment and topics.verifyCompletion match expectations topics.verifyCompletion matches the snapshot on file 1`] = `
{
  "topicIsCompleted": true,
  "topicUri": "smoke-testing-vseed",
}
`;

exports[`Topics routes should match expectations topics.info matches expectations topics.info matches the snapshot on file 1`] = `
{
  "config": {
    "contentMode": "tutorial",
    "groupAccessLevels": {
      "assigned": [
        "all",
      ],
    },
    "prerequisites": [],
    "slug": "smoke-testing",
  },
  "coverImageUrl": "http://localhost:8080/topic-assets/smoke-testing-vseed/images/smoke-testing.jpg",
  "enrollmentData": {
    "currentDocumentUri": "smoke-testing-vseed_basic-topic-functionality",
    "topicVersion": "seed",
  },
  "firstDocumentUri": "smoke-testing-vseed_basic-topic-functionality",
  "prerequisites": [],
  "slug": "smoke-testing",
  "subtitle": "Verify that this topic still works before merging to main.",
  "title": "Smoke Testing",
  "unmetPrerequisites": [],
  "uri": "smoke-testing-vseed",
  "version": "seed",
}
`;

exports[`Topics routes should match expectations topics.info throws an error if the user tries to access a forbidden topic 1`] = `{}`;
